feat: add more finance service functions + add to transaction input component

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <script type="module" src="/src/main.tsx"></script>
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   <script src="https://cdn.jsdelivr.net/npm/react-apexcharts"></script>
+  <script src="../node_modules/flyonui/flyonui.js"></script>
 </body>
-
 </html>
