feat: add flatpickr for transaction date functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link rel="stylesheet" href="node_modules/apexcharts/dist/apexcharts.css" />
+  <link rel="stylesheet" href="node_modules/flatpickr/dist/flatpickr.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React + TS</title>
 </head>
@@ -14,6 +15,7 @@
   <script type="module" src="/src/main.tsx"></script>
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   <script src="https://cdn.jsdelivr.net/npm/react-apexcharts"></script>
-  <script src="../node_modules/flyonui/flyonui.js"></script>
+  <script src="/node_modules/flyonui/flyonui.js"></script>
+  <script src="/node_modules/flatpickr/dist/flatpickr.js"></script>
 </body>
 </html>
