feat: add calendar component

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
   <script src="https://cdn.jsdelivr.net/npm/react-apexcharts"></script>
   <script src="/node_modules/flyonui/flyonui.js"></script>
   <script src="/node_modules/flatpickr/dist/flatpickr.js"></script>
+  <script src="/node_modules/fullcalendar/index.global.js"></script>
 </body>
 </html>
