--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="node_modules/apexcharts/dist/apexcharts.css" />
   <link rel="stylesheet" href="node_modules/flatpickr/dist/flatpickr.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <title>Ledgerly</title>
 </head>
 
